# TinyMRESDK

./: .gitignore  CMakeLists.txt  README.md
PackApp/: CMakeLists.txt  main.cpp
PackRes/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
dependencies/openssl-cmake/: CMakeLists.txt
